--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -29,17 +29,17 @@ services:
         networks:
             - huskyCI_net
 
-    nginx:
-        image: nginx:1.17
-        container_name: nginx
-        volumes:
-            - ../deployments/nginx.conf:/etc/nginx/nginx.conf
-            - ../deployments/certs/:/data/certs/
-        ports:
-            - 80:80
-            - 443:443
-        networks:
-            - huskyCI_net
+    # nginx:
+    #     image: nginx:1.17
+    #     container_name: nginx
+    #     volumes:
+    #         - ../deployments/nginx.conf:/etc/nginx/nginx.conf
+    #         - ../deployments/certs/:/data/certs/
+    #     ports:
+    #         - 80:80
+    #         - 443:443
+    #     networks:
+    #         - huskyCI_net
 
     api:
         container_name: huskyCI_API
